tests/ui-msrv/transmute-ref-src-not-a-reference.stderr
error[E0308]: mismatched types
  --> $DIR/transmute-ref-src-not-a-reference.rs:15:49
   |
15 | const SRC_NOT_A_REFERENCE: &u8 = transmute_ref!(0usize);
   |                                  ---------------^^^^^^-
   |                                  |              |
   |                                  |              expected reference, found `usize`
   |                                  |              help: consider borrowing here: `&0usize`
   |                                  expected due to this
   |
   = note: expected reference `&_`
                   found type `usize`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
